--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
 body {
 	background-image: url("");
 }
+
+.container {
+	width: 100%;
+	height: 20em;
+	border: 2px solid red;
+}
+
+#about {
+	background: purple;
+}
