--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,32 @@ body {
 .container {
 	width: 100%;
 	height: 20em;
-	border: 2px solid red;
+	font-family: "jaf-bernina-sans",sans-serif;
+	font-style: normal;
+	font-weight: 400;
 }
 
 #about {
-	background: purple;
+	background: white;
+}
+
+title {
+	font-family: "jaf-bernina-sans",sans-serif;
+	font-style: normal;
+	font-weight: 700;
+	font-size: 200px;
+}
+
+.header {
+	font-family: "jaf-bernina-sans",sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
+}
+
+#contact {
+	font-family: "jaf-bernina-sans",sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 12px;
 }
